# PurityFromRandomMeasurement

./: .gitignore  CMakeLists.txt  K_HoldM.py  M_HoldK.py  README.md  main.py  random_matrix.py  verify_cs.py
data/: K_holdM_1000_qn_4.mat  K_holdM_1000_qn_4_rp_10.mat  K_holdM_1000_qn_4_rp_50.mat
experiments/: EA_evo.py  EA_evo_IM.py  K_HoldM.py  M_HoldK.py  N_HoldKM.py  QMpemba.py  QMpemba_DataAnalysis_plot.py  QMpemba_IM.py  Test1024.py  ideasWithMIPT.py  random_matrix.py  verify_cs.py
src/cpp/: RenyiEntropy.cpp  ShadowState.cpp  ShadowState.h  TESTOPENMP.cpp  fake_sampler_binding.cpp  fwht.cpp  platformConfig.h  purityShadow.cpp
src/cpp/pcg/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
src/python/: RenyiEntropy.py  ShadowState.py  fake_sampler.py  tools.py
src/python/Physics/: generate_TEST_DM.py
